--- a/SuperHandOn/SuperHandOn/SuperHandOn.vcxproj.filters
+++ b/SuperHandOn/SuperHandOn/SuperHandOn.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClCompile Include="ModuleSceneWorld.cpp">
       <Filter>Game Modules</Filter>
     </ClCompile>
+    <ClCompile Include="ModuleSceneMusic.cpp">
+      <Filter>Game Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Globals.h">
@@ -104,6 +107,9 @@
       <Filter>Game Modules</Filter>
     </ClInclude>
     <ClInclude Include="ModuleSceneWorld.h">
+      <Filter>Game Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleSceneMusic.h">
       <Filter>Game Modules</Filter>
     </ClInclude>
   </ItemGroup>
