--- a/SuperHandOn/SuperHandOn/SuperHandOn.vcxproj.filters
+++ b/SuperHandOn/SuperHandOn/SuperHandOn.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClCompile Include="ModuleFont.cpp">
       <Filter>Core Modules</Filter>
     </ClCompile>
+    <ClCompile Include="ModuleSceneMapAfrica.cpp">
+      <Filter>Game Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Globals.h">
@@ -117,6 +120,9 @@
     </ClInclude>
     <ClInclude Include="ModuleFont.h">
       <Filter>Core Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleSceneMapAfrica.h">
+      <Filter>Game Modules</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
