--- a/SuperHandOn/SuperHandOn/SuperHandOn.vcxproj
+++ b/SuperHandOn/SuperHandOn/SuperHandOn.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{DD0186AF-8FD7-48E8-BA7E-F4CAE839BCA2}</ProjectGuid>
     <RootNamespace>SuperHandOn</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <ProjectName>SuperHangOn</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
