Track class with some decoration
The track class is who will take care about creating the track. All circuits will extend from
this class, only the constructor will be needed
to create different circuits.

--- a/SuperHandOn/SuperHandOn/SuperHandOn.vcxproj.filters
+++ b/SuperHandOn/SuperHandOn/SuperHandOn.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClCompile Include="ModuleSceneMapAfrica.cpp">
       <Filter>Game Modules</Filter>
     </ClCompile>
+    <ClCompile Include="ModuleSceneTrack.cpp">
+      <Filter>Game Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Globals.h">
@@ -123,6 +126,12 @@
     </ClInclude>
     <ClInclude Include="ModuleSceneMapAfrica.h">
       <Filter>Game Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleSceneTrack.h">
+      <Filter>Game Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="Line.h">
+      <Filter>Utils</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
