--- a/SuperHandOn/SuperHandOn/SuperHandOn.vcxproj
+++ b/SuperHandOn/SuperHandOn/SuperHandOn.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="ModuleSceneMapAfrica.cpp" />
     <ClCompile Include="ModuleSceneMenuOne.cpp" />
     <ClCompile Include="ModuleSceneMusic.cpp" />
+    <ClCompile Include="ModuleSceneTrack.cpp" />
     <ClCompile Include="ModuleSceneWorld.cpp" />
     <ClCompile Include="ModuleTextures.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
@@ -146,6 +147,7 @@
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="Line.h" />
     <ClInclude Include="MemLeaks.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="ModuleAudio.h" />
@@ -158,6 +160,7 @@
     <ClInclude Include="ModuleSceneMapAfrica.h" />
     <ClInclude Include="ModuleSceneMenuOne.h" />
     <ClInclude Include="ModuleSceneMusic.h" />
+    <ClInclude Include="ModuleSceneTrack.h" />
     <ClInclude Include="ModuleTextures.h" />
     <ClInclude Include="ModuleWindow.h" />
     <ClInclude Include="ModuleSceneWorld.h" />
